5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1594_1802.log
== TEST (2019-03-20 23:35:07) 
-- CODE:
import math

hp = int(input("initialhp"))
D1 = int(input("valor dado1"))
D2 = int(input("valor dado2"))

dano = ((5*D1)**0.5)+pi**(D2/3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dano = ((5*D1)**0.5)+pi**(D2/3)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:35:21) 
-- CODE:
import math
from math import pi 

hp = int(input("initialhp"))
D1 = int(input("valor dado1"))
D2 = int(input("valor dado2"))

dano = ((5*D1)**0.5)+pi**(D2/3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dano = ((5*D1)**0.5)+pi**(D2/3)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:41:26) 
-- CODE:
import math
from math import pi 

hp = int(input("initialhp"))
D1 = int(input("valor dado1"))
D2 = int(input("valor dado2"))

dano = ((5*D1)**0.5)+pi**(D2/3)
print(dano)
-- OUTPUT:
12.105672378589148
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:41:55) 
-- CODE:
import math
from math import pi 

hp = int(input("initialhp: "))
D1 = int(input("valor dado1: "))
D2 = int(input("valor dado2: "))

dano = ((5*D1)**0.5)+pi**(D2/3)
print(int(dano))


-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:42:48) 
-- CODE:
import math
from math import pi 

hp = int(input("initialhp: "))
D1 = int(input("valor dado1: "))
D2 = int(input("valor dado2: "))

dano = ((5*D1)**0.5)+pi**(D2/3)
print(int(dano))

finalhp = (hp - int(dano))


-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:43:06) 
-- CODE:
import math
from math import pi 

hp = int(input("initialhp: "))
D1 = int(input("valor dado1: "))
D2 = int(input("valor dado2: "))

dano = ((5*D1)**0.5)+pi**(D2/3)
print(int(dano))

finalhp = (hp - int(dano))
print(finalhp)


-- OUTPUT:
12
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:43:21) 
-- CODE:
import math
from math import pi 

hp = int(input("initialhp: "))
D1 = int(input("valor dado1: "))
D2 = int(input("valor dado2: "))

dano = ((5*D1)**0.5)+pi**(D2/3)
print(int(dano))

finalhp = (hp - int(dano))
print(finalhp)


-- OUTPUT:
12
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 23:43:26) 
-- CODE:
import math
from math import pi 

hp = int(input("initialhp: "))
D1 = int(input("valor dado1: "))
D2 = int(input("valor dado2: "))

dano = ((5*D1)**0.5)+pi**(D2/3)
print(int(dano))

finalhp = (hp - int(dano))
print(finalhp)


-- EXECUTION TIME:
0.158581
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
12
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
15
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
3
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:43:39) 
-- CODE:
import math
from math import pi 

hp = int(input("initialhp: "))
D1 = int(input("valor dado1: "))
D2 = int(input("valor dado2: "))

dano = ((5*D1)**0.5)+pi**(D2/3)

finalhp = (hp - int(dano))

print(finalhp)


-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 23:43:43) 
-- CODE:
import math
from math import pi 

hp = int(input("initialhp: "))
D1 = int(input("valor dado1: "))
D2 = int(input("valor dado2: "))

dano = ((5*D1)**0.5)+pi**(D2/3)

finalhp = (hp - int(dano))

print(finalhp)


-- EXECUTION TIME:
0.130297
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 16:10:17) 
-- CODE:
import math
from math import pi 

hp = int(input("initialhp: "))
D1 = int(input("valor dado1: "))
D2 = int(input("valor dado2: "))

dano = ((5*D1)**0.5)+pi**(D2/3)

finalhp = (hp - int(dano))

print(finalhp)


-- EXECUTION TIME:
0.187273
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:12:03) 
-- CODE:
import math
from math import pi 

hp = int(input("initialhp: "))
D1 = int(input("valor dado1: "))
D2 = int(input("valor dado2: "))

dano = ((5*D1)**0.5)+pi**(D2/3)

finalhp = (hp - int(dano))

print(finalhp)


-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:12:03) 
-- CODE:
import math
from math import pi 

hp = int(input("initialhp: "))
D1 = int(input("valor dado1: "))
D2 = int(input("valor dado2: "))

dano = ((5*D1)**0.5)+pi**(D2/3)

finalhp = (hp - int(dano))

print(finalhp)


-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
